src/test/ui/transmutability/visibility/dst.stderr
error[E0446]: private type `dst_type_private::dst::Dst` in public interface
  --> $DIR/dst.rs:66:9
   |
LL |           #[repr(C)] pub(self) struct Dst { // <- private type
   |                      -------------------- `dst_type_private::dst::Dst` declared as private
...
LL | /         pub fn is_transmutable<Src, Context>()
LL | |         where
LL | |             Dst: IsTransmutable<Src, Context>
   | |_____________________________________________^ can't leak private type

error[E0446]: private type `dst_field_type_private::dst::Zst` in public interface
  --> $DIR/dst.rs:92:13
   |
LL |         #[repr(C)] pub(self) struct Zst; // <- private type
   |                    --------------------- `dst_field_type_private::dst::Zst` declared as private
...
LL |             pub(in super) field: Zst,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0446]: restricted type `dst_field_type_private::dst::Dst` in public interface
  --> $DIR/dst.rs:104:9
   |
LL |           #[repr(C)] pub(in super) struct Dst {
   |                      ------------------------ `dst_field_type_private::dst::Dst` declared as restricted
...
LL | /         pub fn is_transmutable<Src, Context>()
LL | |         where
LL | |             Dst: IsTransmutable<Src, Context>
   | |_____________________________________________^ can't leak restricted type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0446`.
